@@ -278,6 +278,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5984: distutils.command.build_ext.check_extensions_list checks were broken
+  for old-style extensions.
+
 - Issue #5810: Fixed Distutils test_build_scripts so it uses 
   sysconfig.get_config_vars.
 
